--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,34 @@
-.main-nav{
-    width: 110rem;
+.main-nav {
+    width: 100%;
     margin: 0 auto;
 }
 
-.main-nav-list{
+.main-nav-list {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 3rem;
 }
 
-.main-nav-link{
-    padding: 4rem 1rem;
+.main-nav-link {
+    /* padding: 4rem 1rem; */
     cursor: pointer;
     font-size: 1.4rem;
+}
+
+.nav-pls {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.user img {
+    height: 40px;
+    border-radius: 10px;
 }
