--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@
       transform: translate(-50%, -50%);
       font-size: 6.8rem;
       color: #fff;
+      pointer-events: none;
   }
   
   .hero-img {
