--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -12,7 +12,12 @@ img{
 .innerImage{
     width: 10%;
     height: calc(width);
+}
+
+.animalContainer{
+    display: flex;
+    width: 100%;
     position: absolute;
     bottom: 0;
-    
+    left: 0;
 }
