update footer and logo

--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,9 @@ header {
   top: 0;
   left: 0;
   width: 100vw;
-  background-color: #c8a2c8;
+  background-color: #fbf0ff;
   z-index: 100;
+  justify-content: space-evenly;
 }
 
 .main-nav-list {
@@ -49,6 +50,10 @@ header {
   padding: 1rem;
   cursor: pointer;
   font-size: 2rem;
+}
+
+.logo{
+  height: 6rem;
 }
 
 /* main ******************  ******************  ****************** */
@@ -136,7 +141,7 @@ header {
 
 .background {
   position: fixed;
-  background-color: #c8a2c8;
+  background-color: #fbf0ff;
 
   height: 100vh;
   width: 100%;
@@ -176,6 +181,7 @@ header {
 
 .info-img{
   width: 100%;
+  border-radius: 2rem;
 }
 
 .info-div{
@@ -192,4 +198,81 @@ header {
 .info-p{
   font-size: 2.4rem;
   line-height: 1.5;
+}
+
+/* footer ******************  ****************** */
+
+.footer{
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid-footer{
+  display: grid;
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+
+}
+
+.logo-col{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo{
+  display: block;
+  margin-bottom: 3.2rem;
+}
+
+.social-links{
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+
+.social-icon{
+  height: 2.4rem;
+  width: 2.4rem;
+}
+
+.legal{
+  font-size: 1.4rem;
+  line-height: 1.6;
+  color: #767676;
+  margin-top: auto;
+}
+
+.footer-heading{
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+.contacts{
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+
+.address{
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav{
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited{
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active{
+  color: #555;
 }
