--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -12,11 +12,13 @@ img{
 .innerImage{
     width: 10%;
     height: calc(width);
+    margin: 2%;
 }
 
 .animalContainer{
     display: flex;
     width: 100%;
+    justify-content: center;
     position: absolute;
     bottom: 0;
     left: 0;
