--- a/css/charity.css
+++ b/css/charity.css
@@ -1,3 +1,33 @@
+.section-search{
+    margin: 4.8rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.search-desc{
+    font-size: 1.8rem;
+}
+
+.search-input{
+    height: 3.6rem;
+    width: 30rem;
+    font-size: 1.8rem;
+}
+
+.search-button{
+    width: 6rem;
+    height: 3.6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-icon{
+    font-size: 2.4rem;
+}
+
 .charities {
     display: flex;
     flex-wrap: wrap;
@@ -35,7 +65,7 @@
 }
 
 .charity-title {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
 }
 
