--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -2,6 +2,7 @@
 .canvas{
     background-color: green;
     width: 100vw;
+    position: relative;
 }
 
 img{
@@ -22,4 +23,26 @@ img{
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+    border-radius: 50px;
+    margin: 0 auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 15%;
+    left: 10%;
+    top: 60px;
+    background-color: rgba(255,255,255,0.5);
+    position: absolute;
+}
+
+.profileimage{
+    height: 80%;
+    width: fit-content;
+    background-color: white;
+    border-radius: 50px;
+    border: solid black;
 }
