--- a/css/charity.css
+++ b/css/charity.css
@@ -37,9 +37,9 @@
 
 .charity-container {
     background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    box-shadow: 0 0.2rem 2rem 0 rgba(31, 38, 135, 0.176);
     backdrop-filter: blur(4px);
-    border-radius: 10px;
+    border-radius: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.18);
     overflow: hidden;
     width: 25rem;
