--- a/css/charity.css
+++ b/css/charity.css
@@ -1,4 +1,4 @@
-.section-search{
+.section-search {
     margin: 4.8rem 0;
     display: flex;
     align-items: center;
@@ -6,17 +6,17 @@
     gap: 1rem;
 }
 
-.search-desc{
+.search-desc {
     font-size: 1.8rem;
 }
 
-.search-input{
+.search-input {
     height: 3.6rem;
     width: 30rem;
     font-size: 1.8rem;
 }
 
-.search-button{
+.search-button {
     width: 6rem;
     height: 3.6rem;
     display: flex;
@@ -24,7 +24,7 @@
     justify-content: center;
 }
 
-.search-icon{
+.search-icon {
     font-size: 2.4rem;
 }
 
@@ -96,4 +96,13 @@
 
 .charity-addToCart:hover {
     outline: 1px solid white;
+}
+
+.charity-payment {
+    display: flex;
+    gap: 1rem;
+}
+
+.charity-payment input {
+    width: 100%;
 }
