updated profile page menu header

--- a/css/profilestyle.css
+++ b/css/profilestyle.css
@@ -48,6 +48,7 @@ img{
 .userInfo{
     margin: 5px;
     display: flex;
+    width: 200px;
     height: 80%;
     background-color: white;
     border-radius: 50px;
