--- a/css/charity.css
+++ b/css/charity.css
@@ -28,6 +28,33 @@
     font-size: 2.4rem;
 }
 
+
+    
+    
+.No-donations-found{
+    display: none;
+    margin-top: 4.8rem;
+    font-size: 3.2rem;
+    color: rgb(255, 0, 0);
+    text-align: center;
+}
+
+.No-donations-found.Display-NMF{
+    display: block;
+}
+
+.loading-message{
+    display: none;
+    margin-top: 4.8rem;
+    font-size: 3.2rem;
+    text-align: center;
+}
+
+.loading-message.Display-NMF{
+    display: block;
+}
+
+
 .charities {
     display: flex;
     flex-wrap: wrap;
