--- a/css/charity.css
+++ b/css/charity.css
@@ -63,13 +63,19 @@
 }
 
 .charity-container {
-    background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 0.2rem 2rem 0 rgba(31, 38, 135, 0.176);
+    background: rgba(239, 250, 255, 0.25);
+    box-shadow: 0.5rem 1rem 1rem 0 rgba(31, 38, 135, 0.1);
     backdrop-filter: blur(4px);
     border-radius: 1rem;
-    border: 1px solid rgba(255, 255, 255, 0.18);
+    border: 0.3rem solid rgba(0, 0, 0, 0.482);
     overflow: hidden;
     width: 25rem;
+    transition: 0.3s all;
+}
+
+.charity-container:hover{
+    transform: translateY(-0.5rem);
+    box-shadow: 0.5rem 1rem 1rem 0 rgba(31, 38, 135, 0.05);
 }
 
 .charity-imageContainer {
@@ -88,29 +94,35 @@
 }
 
 .charity-info {
+    height: 17rem;
     padding: 1rem;
+    display: grid;
+    gap: 0.5rem;
+    justify-content: center;
 }
 
 .charity-title {
     font-size: 1.8rem;
     font-weight: bold;
+    align-self: center;
 }
 
 .charity-description {
     margin-top: 0.5rem;
     line-height: 1.4;
-    color: lightgray;
+    color: #333;
+    align-self: end;
 }
 
 .charity-price {
     text-align: right;
     display: block;
+    align-self: center;
 }
 
 .charity-addToCart {
-    margin-top: 1.5rem;
     display: block;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 86, 171, 0.5);
     color: white;
     text-decoration: none;
     padding: 1rem;
@@ -127,9 +139,13 @@
 
 .charity-payment {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 1rem;
 }
 
 .charity-payment input {
     width: 100%;
+    height: 4rem;
 }
+
