--- a/css/account.css
+++ b/css/account.css
@@ -14,3 +14,47 @@
     font-size: 2.8rem;
     text-align: center;
 }
+
+.basics-container{
+    display: flex;
+    justify-content: center;
+}
+
+.basics{
+    margin: 2.4rem 0 4.8rem 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.basics-flex{
+    display: flex;
+    align-items: end;
+    justify-content: start;
+    gap: 2.4rem;
+    padding: 0 10rem;
+}
+
+.basics-flex:nth-child(odd){
+    background-color: rgb(247, 247, 247);
+}
+
+.basics-flex:nth-child(even){
+    background-color: rgb(233, 233, 233);
+}
+
+.basics-name, .basics-email{
+    font-size: 2.4rem;
+}
+
+#NAME, #EMAIL{
+    font-size:2rem;
+}
+
+.basics-email{
+
+}
+
+#HISTORY{
+    margin-top: 2.4rem;
+    display: flex;
+    justify-content: center;
+}
