--- a/css/charity.css
+++ b/css/charity.css
@@ -56,6 +56,8 @@
 
 
 .charities {
+    max-width: 140rem;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
