--- a/css/account.css
+++ b/css/account.css
@@ -1,5 +1,6 @@
 .account{
     margin: 4.8rem auto;
+    padding: 4.8rem 0;
     background-color: #fff;
 }
 
@@ -21,8 +22,7 @@
 }
 
 .basics{
-    margin: 2.4rem 0 4.8rem 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100%;
 }
 
 .basics-flex{
@@ -30,7 +30,6 @@
     align-items: end;
     justify-content: start;
     gap: 2.4rem;
-    padding: 0 10rem;
 }
 
 .basics-flex:nth-child(odd){
@@ -49,12 +48,34 @@
     font-size:2rem;
 }
 
-.basics-email{
-
+.payment-button{
+    font-size: 1.8rem;
+    padding: 0.5rem 1.5rem;
 }
 
-#HISTORY{
-    margin-top: 2.4rem;
+
+.container-small{
+    width: 60rem;
+    margin: 2.4rem auto 4.8rem auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container-inner{
     display: flex;
+    align-items: center;
     justify-content: center;
+}
+
+.donate{
+    width: 100%;
+    font-size: 2rem;
+    list-style: none;
+}
+
+.donate li:nth-child(odd){
+    background-color: rgb(247, 247, 247);
+}
+
+.donate li:nth-child(even){
+    background-color: rgb(233, 233, 233);
 }
