--- a/css/charity.css
+++ b/css/charity.css
@@ -29,9 +29,9 @@
 }
 
 
-    
-    
-.No-donations-found{
+
+
+.No-donations-found {
     display: none;
     margin-top: 4.8rem;
     font-size: 3.2rem;
@@ -39,18 +39,18 @@
     text-align: center;
 }
 
-.No-donations-found.Display-NMF{
+.No-donations-found.Display-NMF {
     display: block;
 }
 
-.loading-message{
+.loading-message {
     display: none;
     margin-top: 4.8rem;
     font-size: 3.2rem;
     text-align: center;
 }
 
-.loading-message.Display-NMF{
+.loading-message.Display-NMF {
     display: block;
 }
 
@@ -75,7 +75,7 @@
     transition: 0.3s all;
 }
 
-.charity-container:hover{
+.charity-container:hover {
     transform: translateY(-0.5rem);
     box-shadow: 0.5rem 1rem 1rem 0 rgba(31, 38, 135, 0.05);
 }
@@ -133,6 +133,7 @@
     outline: 1px solid transparent;
     transition: outline-color var(--transition-time);
     cursor: pointer;
+    line-height: 1;
 }
 
 .charity-addToCart:hover {
@@ -149,5 +150,7 @@
 .charity-payment input {
     width: 100%;
     height: 4rem;
+    padding: 0 1rem;
+    border-radius: 2rem;
+    border: 1px solid gray;
 }
-
